fix(ffe-form): z-index på wrapper igjen

--- a/packages/ffe-form/less/input-field.less
+++ b/packages/ffe-form/less/input-field.less
@@ -45,7 +45,6 @@
         width: 100%;
         margin: 0;
         padding: 0;
-        z-index: 1;
 
         &--inline {
             display: inline-flex;
